--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,11 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true,
+    "paths": {
+      "@/*": ["./src"]
+    }
   },
   "include": ["vite.config.ts"]
 }
